# RoadIA

./: .gitignore  CODE_REVIEW_FRONTEND.md  FRONTEND_ARCHITECTURE.md  README.md  VEHICLE_TYPES_IMPLEMENTATION.md  VEHICLE_TYPES_RESEARCH.md  docker-compose.yml  package-lock.json  package.json
server/: .env.example  Cargo.toml  Dockerfile
server/data/: lannion.osm.pbf
server/doc/: book.toml  katex-loader.js  mermaid-loader.js
server/doc/book/: 404.html  book.toml  build.html  index.html  katex-init-7f5dd265.js  katex-init.js  katex-loader.js  mermaid-init-1ea3646b.js  mermaid-init.js  print.html  scoring.html  searcher-c2a407aa.js  searchindex-3ae62e47.js  searchindex-a8bb04b6.js  toc-5b6ca4d7.js  toc-98ddbbda.js  toc.html
server/doc/book/api/: index.html  runner.html  websocket.html  ws_examples.html
server/doc/book/book/: 404.html  index.html  print.html  scheduling.html  searcher-c2a407aa.js  (+3 more)
server/doc/src/: SUMMARY.md  build.md  index.md  mermaid-loader.js  scoring.md  tests.md
server/src/: lib.rs  main.rs
server/src/api/: map_generator.rs  mod.rs  server.rs  websocket.rs
server/src/map/: editor.rs  intersection.rs  mod.rs  model.rs  osm_parser.rs  road.rs  roundabout.rs  tests.rs  traffic_light.rs  waypoint.rs
server/src/scoring/: mod.rs
server/src/simulation/: config.rs  engine.rs  engine_intersection.rs  engine_tests.rs  handle.rs  kinematics.rs  metrics.rs  mod.rs  vehicle.rs
server/src/test/: editor_tests.rs  engine_tests.rs  intersection_test.rs  intersection_tests.rs  kinematics_tests.rs  mod.rs  simulation_tests.rs  vehicle_tests.rs
(+116 files in other folders)
