[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
osmpbf = "0.3"      # Fast PBF parser
petgraph = "0.6"    # Graph data structure
geo = "0.26"        # For geospatial calculations (distance, etc.)
anyhow = "1.0"      # Error handling
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
futures = "0.3.31"
