[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
petgraph = "0.6"    # Graph data structure
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.2"
rand_distr = "0.5"
osmpbf = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
tower-http = { version = "0.5", features = ["cors"] }
dotenvy = "0.15"
